# VastSpaceTakeHome

./: .gitignore  CMakeLists.txt  README.md
include/: mining_truck.h  simulation.h  unload_station.h
src/: main.cpp  mining_truck.cpp  simulation.cpp  unload_station.cpp
tests/: test_mining_truck.cpp  test_simulation.cpp  test_unload_station.cpp
